# hDFA

./: LICENCE  Makefile  README  bitsets.c  bitsets.h  dfa-driver.c  dfa.c  dfa.h  hDFA.cabal  hdfa.cabal  qsort.c  qsort.h  test.c
Data/: DFA.hs
Data/DFA/: DOT.hs  KISS2.hs  STAMINA.hs
Tests/: 000_Simple.hs
