Name: hDFA
Version: 0.0.2
Cabal-version: >= 1.2
Build-type: Simple
Copyright: 2010, 2011 Peter Gammie, some parts (C) 1998-2009 Gerwin Klein <lsf@jflex.de>
Maintainer: peteg42@gmail.com
Author: Peter Gammie
License: GPL
License-file: COPYRIGHT
Synopsis: A simple library for representing and minimising DFAs.
Category: Data
Description:

 hDFA provides a simple API for representing and minimizing
 deterministic finite automata (DFAs) using an explicit representation
 (a transition matrix). It includes a port of the Hopcroft
 minimization algorithm in JFlex to C.

extra-source-files: Makefile bitsets.c bitsets.h dfa.c dfa.h test.c

source-repository head
  type:     git
  location: git://github.com/peteg/hDFA.git

Library
  build-depends: base >= 2 && < 5, containers, directory, process
  extensions: ForeignFunctionInterface
  exposed-modules:
    Data.DFA
    Data.DFA.DOT
    Data.DFA.KISS2
    Data.DFA.STAMINA
  includes: dfa.h
  c-sources: bitsets.c dfa.c
  cc-options: -Wall -std=c99 -pedantic
  ghc-options: -Wall
